# autoresearch-connect4

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  report.py  train.py
